PJ-2008-03-20-1: Bugfix.:     Advanced Query with wild card character * does not produce correct results.
                 Enhancem.:   The SQLQueryResultsets now follow the names from the database row set meta data.
                 Enhancem.:   The lifecycle of the SQLQueryResultsets was optimised. Passivate is called in finally
                 Enhancem.:   Unused statements and results pro ArcoDbConnection was removed
                 Bugster:     6511009
                 Review:      LP

PJ-2008-03-20-0: Enhancem.:   Change the reporting project.xml

JO-2008-03-20-0: Enhancem.:   Enhanced reporting test SQLGeneratotTest
                 Review:      PJ

JG-2008-03-17-0: CVS:         Moved V61u4_TAG
                              - include in 6.1u4:      AP-2008-03-17-0,
                              - not included in 6.1u4: PJ-2008-03-04-0.
-----------------------------------------------------------------------

AP-2008-03-17-0: Bugfix:      Fix of incorrect usage summary for larger databases.
                 Review:      JO, AP

PJ-2008-03-04-0: Bugfix:      Validation of the Filter List in Simple Query builder
                              fails
                 Bugfix:      Row Limit in ARCo Simple Query builder cannot be 
                              empty
                 Bugster:     6670264, 6661461, 
                 Review:      JO

JG-2008-02-28-0: CVS:         Created V61u4_TAG.
------------------------------------------------

AP-2008-02-28-0: Enhancem.:   ARCo reporting installation - get all required SWC
                              information for installation.
                 Review:      LP

JO-2008-02-27-0: Bugfix:      Fixed commit JO-2008-02-22-0 to work with arcorun
                 Review:      PJ

JO-2008-02-22-0: Bugfix:      In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
                              Row Limit in Simple Query uses wrong syntax
                 Bugster:     6661500, 6640762