@@ -118,31 +118,42 @@ public abstract class AbstractSQLGenerator implements SQLGenerator {
 
       Iterator iter = sortedFilter.iterator();
       Filter filter = null;
-
       int lastOffset = 0;
       Object lb = null;
-      while(iter.hasNext()) {
-         filter = (Filter)iter.next();
+      
+      while (iter.hasNext()) {
+         filter = (Filter) iter.next();
 
-         if(filter.isActive() && filter.isLateBinding()) {
+         if (filter.isActive() && filter.isLateBinding()) {
             buf.append(sql.substring(lastOffset, filter.getStartOffset()));
-            if(lateBindings != null) {
+            if (lateBindings != null) {
                lb = lateBindings.get(filter.getName());
             } else {
                lb = null;
             }
-            if(lb != null) {
-               if(filter.isSetCondition()) {
+            if (lb != null) {
+               // Add a column
+               buf.append(filter.getName());
+               buf.append(" ");
+               // Add a condition
+               if (filter.isSetCondition()) {
                   buf.append(filter.getCondition());
                   buf.append(" ");
                }
+               boolean quote = !isQuoted(lb);
+               if (quote) {
+                  buf.append("'");
+               }
                buf.append(lb);
+               if (quote) {
+                  buf.append("'");
+               }
             }
             lastOffset = filter.getEndOffset();
          }
       }
 
-      if(lastOffset < sql.length()) {
+      if (lastOffset < sql.length()) {
          buf.append(sql.substring(lastOffset));
       }
 
@@ -287,6 +298,20 @@ public abstract class AbstractSQLGenerator implements SQLGenerator {
       sqle.setLimit(query.getLimit());
    }
    
+   /**
+    * Test if user input is quoted 
+    * @param lb the user input object
+    * @return a <code>boolean</code> of true, user input should not be extra quoted
+    */
+   boolean isQuoted(Object lb) {
+      final String lbstrm = lb.toString().trim();
+      boolean ret = lbstrm.startsWith("(") && lbstrm.endsWith(")");
+      ret = ret || (lbstrm.startsWith("'") && lbstrm.endsWith("'"));
+      ret = ret || (lbstrm.startsWith("{") && lbstrm.endsWith("}"));
+      ret = ret || (lbstrm.startsWith("\"") && lbstrm.endsWith("\""));
+      return ret;
+   }
+      
    private String getFilterExpression(Filter filter, String filterName, Map lateBindings)
       throws SQLGeneratorException {
       FilterType ft = getFilterType(filter);
